--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<a class="nav-link active" aria-current="page" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">About us</a>
+						<a class="nav-link" href="#about">About us</a>
 					</li>
 
 					<li class="nav-item">
@@ -125,7 +125,7 @@
 			<div class="row">
 				<div class="col-md-5">
 					<div class="about_img">
-						<img src="images/about.png" class="w-100 img-fluid" alt="">
+						<img src="images/about1.png" class="w-100 img-fluid" alt="">
 					</div>
 				</div>
 				<div class="col-md-7">
